--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Package the plugin
         run: |
-          cd /home/runner/work/watercrawl-dify-plugin && /tmp/dify plugin package ./watercrawl-dify-plugin
+          cd /home/runner/work/watercrawl-datasource-dify-plugin && /tmp/dify plugin package ./watercrawl-datasource-dify-plugin
           
       - name: Create Release Notes
         run: |
@@ -48,8 +48,8 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: /home/runner/work/watercrawl-dify-plugin/watercrawl-dify-plugin.difypkg
-          asset_name: watercrawl-dify-plugin-${{ github.ref_name }}.difypkg
+          asset_path: /home/runner/work/watercrawl-datasource-dify-plugin/watercrawl-datasource-dify-plugin.difypkg
+          asset_name: watercrawl-datasource-dify-plugin-${{ github.ref_name }}.difypkg
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
