--- a/provider/watercrawl_datasource.yaml
+++ b/provider/watercrawl_datasource.yaml
@@ -21,7 +21,7 @@ credentials_schema:
     type: secret-input
     url: https://app.watercrawl.dev/dashboard/api-keys
 identity:
-  author: langgenius
+  author: watercrawl
   name: watercrawl
   label:
     en_US: Watercrawl
